--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,3 @@
-google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+highend=http://45.11.184.84
+standard=http://45.11.184.121
+website=https://www.hostnv.kr
