--- a/urls.cfg
+++ b/urls.cfg
@@ -1,3 +1,3 @@
 website=https://www.hostnv.kr
-highend vps=http://45.11.184.127
-standard vps=http://45.11.184.121
+highend=http://45.11.184.127
+standard=http://45.11.184.121
