--- a/urls.cfg
+++ b/urls.cfg
@@ -1,3 +1,3 @@
 website=https://www.hostnv.kr
-highend=http://45.11.184.127
-standard=http://45.11.184.121
+highend=45.11.184.127
+standard=45.11.184.121
