--- a/urls.cfg
+++ b/urls.cfg
@@ -1,3 +1,3 @@
 website=https://www.hostnv.kr
-highend=http://156.236.19.153/
-standard=http://156.236.19.154/
+highend=http://156.236.19.153
+standard=http://156.236.19.154
